crates/reinhardt-pages/tests/ui/client_form/choices/fail/tagged_enum.rs
use reinhardt_pages::ClientFormChoices;

#[derive(Clone, Default, PartialEq, ClientFormChoices)]
#[serde(tag = "kind")]
enum ProviderMode {
	#[default]
	Fake,
	LiveApi,
}

fn main() {}
